--- a/admin/config.yml
+++ b/admin/config.yml
@@ -145,7 +145,6 @@ collections:
                 widget: "image"
           - label: "History Slides"
             name: "history-slides"
-            file: _data/slide.yml
             widget: "object"
             fields:
               - label: "Edit History Slides"
@@ -155,7 +154,7 @@ collections:
                   - label: "Slide Name"
                     name: "name"
                     widget: "string"
-                    hint: "No capitals, replace spaces with a dash (-)."
+                    hint: "No capitals, replace spaces with a dash (-). Ex: the-hub"
                   - label: "Reverse position of Image and Text?"
                     name: "reverse"
                     widget: "boolean"
@@ -174,32 +173,36 @@ collections:
                   - label: "Slide Image"
                     name: "image"
                     widget: "image"
-          - label: "Include sponsor bar?"
-            name: "sponsorBar"
-            widget: "boolean"
-            hint: "Turn on to include list of sponsors at bottom of page above footer."
-  - label: "History Slides"
-    name: "history-slides"
-    files:
-      - label: "History Slides"
-        name: "history-slides"
-        file: _data/slide.yml
-        fields:
-          - label: "Edit History Slides"
-            name: "edit-history-slides"
+          - label: "Our Services"
+            name: "our-services"
             widget: "list"
             fields:
-              - label: "Slide Name"
-                name: "name"
+              - label: "Logo"
+                name: "logo"
+                widget: "image"
+              - label: "Service Name"
+                name: "title"
                 widget: "string"
-                hint: "No capitals, replace spaces with a dash (-)."
+              - label: "Service Link"
+                name: "link"
+                widget: "string"
+                hint: "Used to connect the preview list to the full service descripion. Must be in lower case with dashes (-) instead of spaces. Ex: the-hub"
+              - label: "Short Description"
+                name: "shortDesc"
+                widget: "string"
+                hint: "Used in preview list of all services."
               - label: "Reverse position of Image and Text?"
                 name: "reverse"
                 widget: "boolean"
                 hint: "If selected, the image will appear on the left and the text will be on the right."
-              - label: "Slide Text Content"
-                name: "content"
+              - label: "Long Description"
+                name: "longDesc"
                 widget: "markdown"
-              - label: "Slide Image"
-                name: "image"
+                hint: "Used in slides giving details about the service."
+              - label: "Service Slide Image"
+                name: "bgImg"
                 widget: "image"
+          - label: "Include sponsor bar?"
+            name: "sponsorBar"
+            widget: "boolean"
+            hint: "Turn on to include list of sponsors at bottom of page above footer."
