Add what we give data

--- a/admin/config.yml
+++ b/admin/config.yml
@@ -177,12 +177,12 @@ collections:
             name: "our-services"
             widget: "list"
             fields:
-              - label: "Logo"
-                name: "logo"
-                widget: "image"
               - label: "Service Name"
                 name: "title"
                 widget: "string"
+              - label: "Logo"
+                name: "logo"
+                widget: "image"
               - label: "Service Link"
                 name: "link"
                 widget: "string"
@@ -191,10 +191,10 @@ collections:
                 name: "shortDesc"
                 widget: "string"
                 hint: "Used in preview list of all services."
-              - label: "Reverse position of Image and Text?"
+              - label: "Reverse position of Slide Image and Text?"
                 name: "reverse"
                 widget: "boolean"
-                hint: "If selected, the image will appear on the left and the text will be on the right."
+                hint: "If selected, in the services slide the image will appear on the left and the text will be on the right."
               - label: "Long Description"
                 name: "longDesc"
                 widget: "markdown"
@@ -202,6 +202,32 @@ collections:
               - label: "Service Slide Image"
                 name: "bgImg"
                 widget: "image"
+          - label: "What We Give?"
+            name: "what-we-give"
+            widget: "object"
+            fields:
+              - label: "Banner Title"
+                name: "bannerTitle"
+                widget: "string"
+              - label: "Banner Text"
+                name: "bannerText"
+                widget: "string"
+              - label: "Banner Image"
+                name: "bannerImg"
+                widget: "image"
+              - label: "Donations Title"
+                name: "donationsTitle"
+                widget: "string"
+              - label: "Donations List"
+                name: "donations"
+                widget: "list"
+                fields:
+                  - label: "Donor"
+                    name: "donor"
+                  - label: "Amount"
+                    name: "amount"
+                    widget: "number"
+                    valueType: "float"
           - label: "Include sponsor bar?"
             name: "sponsorBar"
             widget: "boolean"
