Change donation amount to string

--- a/_data/pages/about.yml
+++ b/_data/pages/about.yml
@@ -161,7 +161,7 @@ what-we-give:
     nulla id placerat porta.
   bannerTitle: 'Each year we donate over $50,000 to local organizations'
   donations:
-    - amount: 250
+    - amount: '$6,000.00'
       donor: United Way Lanark County
     - amount: '$6,900.00'
       donor: Mississippi Mills Youth Center
