Update Home page input structure

--- a/admin/config.yml
+++ b/admin/config.yml
@@ -70,6 +70,12 @@ collections:
           - label: "Page Title"
             name: "title"
             widget: "string"
+          - label: "Page Headline"
+            name: "h1Text"
+            widget: "string"
+          - label: "Page Byline"
+            name: "bylineText"
+            widget: "string"
           - label: "Include Banner?"
             name: "hero"
             widget: "boolean"
@@ -78,12 +84,6 @@ collections:
             name: "banner"
             widget: "object"
             fields:
-              - label: "Banner Title"
-                name: "h1Text"
-                widget: "string"
-              - label: "Banner Subtitle"
-                name: "bylineText"
-                widget: "string"
               - label: "Banner Button"
                 name: "bannerButton"
                 widget: "object"
@@ -226,8 +226,7 @@ collections:
                     name: "donor"
                   - label: "Amount"
                     name: "amount"
-                    widget: "number"
-                    valueType: "float"
+                    widget: "string"
           - label: "Include sponsor bar?"
             name: "sponsorBar"
             widget: "boolean"
