--- a/admin/config.yml
+++ b/admin/config.yml
@@ -79,7 +79,7 @@ collections:
           - label: "Include Banner?"
             name: "hero"
             widget: "boolean"
-            hint: "Turn on to include banner at top of the page."
+            hint: "Turn on to include banner at top of the page. The banner will include the Page Headline and Page Byline."
           - label: "Banner"
             name: "banner"
             widget: "object"
@@ -112,20 +112,20 @@ collections:
           - label: "Page Title"
             name: "title"
             widget: "string"
+          - label: "Page Headline"
+            name: "h1Text"
+            widget: "string"
+          - label: "Page Byline"
+            name: "bylineText"
+            widget: "string"
           - label: "Include Banner?"
             name: "hero"
             widget: "boolean"
-            hint: "Turn on to include banner at top of the page."
+            hint: "Turn on to include banner at top of the page. The banner will include the Page Headline and Page Byline."
           - label: "Banner"
             name: "banner"
             widget: "object"
             fields:
-              - label: "Banner Title"
-                name: "h1Text"
-                widget: "string"
-              - label: "Banner Subtitle"
-                name: "bylineText"
-                widget: "string"
               - label: "Banner Button"
                 name: "bannerButton"
                 widget: "object"
