Add home announcement bar data

--- a/_data/pages/home.yml
+++ b/_data/pages/home.yml
@@ -10,4 +10,11 @@ banner:
     heroBtnLink: /about/
     heroBtnText: Learn More
   heroImg: /images/uploads/hero-home.jpg
+announcements:
+  activateAnnouncements: true
+  announcementButton:
+    announcementBtn: true
+    announcementBtnLink: /about/
+    announcementBtnText: Learn More
+  announcementImg: /images/uploads/contest-prev.jpg
 sponsorBar: true
