--- a/admin/config.yml
+++ b/admin/config.yml
@@ -105,6 +105,38 @@ collections:
               - label: "Banner Image"
                 name: "heroImg"
                 widget: "image"
+          - label: "Announcements"
+            name: "announcements"
+            hint: "This section is used to highlight a special items for sale or a contest you are currently running."
+            widget: "object"
+            fields:
+              - label: "Turn on Announcements section?"
+                name: "activateAnnouncements"
+                widget: "boolean"
+              - label: "Announcement Message"
+                name: "message"
+                widget: "markdown"
+              - label: "Announcement Button"
+                name: "announcementButton"
+                widget: "object"
+                fields:
+                  - label: "Include button in banner?"
+                    name: "announcementBtn"
+                    widget: "boolean"
+                    hint: "Turn on to include button in banner."
+                  - label: "Button Link"
+                    name: "announcementBtnLink"
+                    widget: "string"
+                  - label: "Button Text"
+                    name: "announcementBtnText"
+                    widget: "string"
+                  - label: "Button Styles"
+                    name: "announcementBtnStyle"
+                    widget: "string"
+                    hint: "Change the style of the button. Type in one of the following colour options: 'btn-white' or 'btn-ghost'. If the button links to another location on this page, add 'smooth-scroll' for nice transition. DO NOT add 'smooth-scroll' if linking to a different page on the website or an external page."
+              - label: "Announcement Image"
+                name: "announcementImg"
+                widget: "image"
           - label: "Include sponsor bar?"
             name: "sponsorBar"
             widget: "boolean"
@@ -242,6 +274,98 @@ collections:
       - label: "Volunteer"
         name: "volunteer"
         file: _data/pages/volunteer.yml
+        fields:
+          - label: "Page Title"
+            name: "title"
+            widget: "string"
+          - label: "Page Headline"
+            name: "h1Text"
+            widget: "string"
+          - label: "Page Byline"
+            name: "bylineText"
+            widget: "string"
+          - label: "Include Banner?"
+            name: "hero"
+            widget: "boolean"
+            hint: "Turn on to include banner at top of the page. The banner will include the Page Headline and Page Byline."
+          - label: "Banner"
+            name: "banner"
+            widget: "object"
+            fields:
+              - label: "Banner Button"
+                name: "bannerButton"
+                widget: "object"
+                fields:
+                  - label: "Include button in banner?"
+                    name: "heroBtn"
+                    widget: "boolean"
+                    hint: "Turn on to include button in banner."
+                  - label: "Button Link"
+                    name: "heroBtnLink"
+                    widget: "string"
+                  - label: "Button Text"
+                    name: "heroBtnText"
+                    widget: "string"
+                  - label: "Button Styles"
+                    name: "heroBtnStyle"
+                    widget: "string"
+                    hint: "Change the style of the button. Type in one of the following colour options: 'btn-white' or 'btn-ghost'. If the button links to another location on this page, add 'smooth-scroll' for nice transition. DO NOT add 'smooth-scroll' if linking to a different page on the website or an external page."
+              - label: "Banner Image"
+                name: "heroImg"
+                widget: "image"
+          - label: "Include sponsor bar?"
+            name: "sponsorBar"
+            widget: "boolean"
+            hint: "Turn on to include list of sponsors at bottom of page above footer."
+      - label: "News & Events"
+        name: "news-events"
+        file: _data/pages/news-events.yml
+        fields:
+          - label: "Page Title"
+            name: "title"
+            widget: "string"
+          - label: "Page Headline"
+            name: "h1Text"
+            widget: "string"
+          - label: "Page Byline"
+            name: "bylineText"
+            widget: "string"
+          - label: "Include Banner?"
+            name: "hero"
+            widget: "boolean"
+            hint: "Turn on to include banner at top of the page. The banner will include the Page Headline and Page Byline."
+          - label: "Banner"
+            name: "banner"
+            widget: "object"
+            fields:
+              - label: "Banner Button"
+                name: "bannerButton"
+                widget: "object"
+                fields:
+                  - label: "Include button in banner?"
+                    name: "heroBtn"
+                    widget: "boolean"
+                    hint: "Turn on to include button in banner."
+                  - label: "Button Link"
+                    name: "heroBtnLink"
+                    widget: "string"
+                  - label: "Button Text"
+                    name: "heroBtnText"
+                    widget: "string"
+                  - label: "Button Styles"
+                    name: "heroBtnStyle"
+                    widget: "string"
+                    hint: "Change the style of the button. Type in one of the following colour options: 'btn-white' or 'btn-ghost'. If the button links to another location on this page, add 'smooth-scroll' for nice transition. DO NOT add 'smooth-scroll' if linking to a different page on the website or an external page."
+              - label: "Banner Image"
+                name: "heroImg"
+                widget: "image"
+          - label: "Include sponsor bar?"
+            name: "sponsorBar"
+            widget: "boolean"
+            hint: "Turn on to include list of sponsors at bottom of page above footer."
+      - label: "Donate"
+        name: "donate"
+        file: _data/pages/donate.yml
         fields:
           - label: "Page Title"
             name: "title"
