--- a/admin/config.yml
+++ b/admin/config.yml
@@ -102,6 +102,7 @@ collections:
                     name: "heroBtnStyle"
                     widget: "string"
                     hint: "Change the style of the button. Type in one of the following colour options: 'btn-white' or 'btn-ghost'. If the button links to another location on this page, add 'smooth-scroll' for nice transition. DO NOT add 'smooth-scroll' if linking to a different page on the website or an external page."
+                    required: false
               - label: "Banner Image"
                 name: "heroImg"
                 widget: "image"
@@ -134,6 +135,7 @@ collections:
                     name: "announcementBtnStyle"
                     widget: "string"
                     hint: "Change the style of the button. Type in one of the following colour options: 'btn-white' or 'btn-ghost'. If the button links to another location on this page, add 'smooth-scroll' for nice transition. DO NOT add 'smooth-scroll' if linking to a different page on the website or an external page."
+                    required: false
               - label: "Announcement Image"
                 name: "announcementImg"
                 widget: "image"
@@ -180,6 +182,7 @@ collections:
                     name: "heroBtnStyle"
                     widget: "string"
                     hint: "Change the style of the button. Type in one of the following colour options: 'btn-white' or 'btn-ghost'. If the button links to another location on this page, add 'smooth-scroll' for nice transition. DO NOT add 'smooth-scroll' if linking to a different page on the website or an external page."
+                    required: false
               - label: "Banner Image"
                 name: "heroImg"
                 widget: "image"
@@ -310,6 +313,7 @@ collections:
                     name: "heroBtnStyle"
                     widget: "string"
                     hint: "Change the style of the button. Type in one of the following colour options: 'btn-white' or 'btn-ghost'. If the button links to another location on this page, add 'smooth-scroll' for nice transition. DO NOT add 'smooth-scroll' if linking to a different page on the website or an external page."
+                    required: false
               - label: "Banner Image"
                 name: "heroImg"
                 widget: "image"
@@ -356,6 +360,7 @@ collections:
                     name: "heroBtnStyle"
                     widget: "string"
                     hint: "Change the style of the button. Type in one of the following colour options: 'btn-white' or 'btn-ghost'. If the button links to another location on this page, add 'smooth-scroll' for nice transition. DO NOT add 'smooth-scroll' if linking to a different page on the website or an external page."
+                    required: false
               - label: "Banner Image"
                 name: "heroImg"
                 widget: "image"
@@ -402,6 +407,7 @@ collections:
                     name: "heroBtnStyle"
                     widget: "string"
                     hint: "Change the style of the button. Type in one of the following colour options: 'btn-white' or 'btn-ghost'. If the button links to another location on this page, add 'smooth-scroll' for nice transition. DO NOT add 'smooth-scroll' if linking to a different page on the website or an external page."
+                    required: false
               - label: "Banner Image"
                 name: "heroImg"
                 widget: "image"
