--- a/admin/config.yml
+++ b/admin/config.yml
@@ -6,60 +6,6 @@ media_folder: "images/uploads"
 display_url: https://your-site.com
 
 collections:
-  - name: "contact-information"
-    label: "Contact Information"
-    files:
-      - label: "Contact Information"
-        name: "site"
-        file: "_data/site.yml"
-        fields:
-          - label: "Telephone Number Data (No spaces or dashes)"
-            name: "tel"
-            widget: "string"
-          - label: "Telephone Number Display"
-            name: "telDisplay"
-            widget: "string"
-          - label: "Email"
-            name: "email"
-            widget: "string"
-          - label: "The Hub Contact Info"
-            name: "hubContact"
-            widget: "object"
-            fields:
-            - label: "Telephone Number Data (No spaces or dashes)"
-              name: "tel"
-              widget: "string"
-            - label: "Telephone Number Display"
-              name: "telDisplay"
-              widget: "string"
-            - label: "Address Line 1"
-              name: "addressLine1"
-              widget: "string"
-            - label: "Address Line 2"
-              name: "addressLine2"
-              widget: "string"
-            - label: "Map Link"
-              name: "mapLink"
-              widget: "string"
-          - label: "Rebound Contact Info"
-            name: "reboundContact"
-            widget: "object"
-            fields:
-            - label: "Telephone Number Data (No spaces or dashes)"
-              name: "tel"
-              widget: "string"
-            - label: "Telephone Number Display"
-              name: "telDisplay"
-              widget: "string"
-            - label: "Address Line 1"
-              name: "addressLine1"
-              widget: "string"
-            - label: "Address Line 2"
-              name: "addressLine2"
-              widget: "string"
-            - label: "Map Link"
-              name: "mapLink"
-              widget: "string"
   - label: "Pages"
     name: "pages"
     files:
@@ -415,3 +361,87 @@ collections:
             name: "sponsorBar"
             widget: "boolean"
             hint: "Turn on to include list of sponsors at bottom of page above footer."
+  - name: "contact-information"
+    label: "Contact Information"
+    files:
+      - label: "Contact Information"
+        name: "site"
+        file: "_data/site.yml"
+        fields:
+          - label: "Telephone Number Data (No spaces or dashes)"
+            name: "tel"
+            widget: "string"
+          - label: "Telephone Number Display"
+            name: "telDisplay"
+            widget: "string"
+          - label: "Email"
+            name: "email"
+            widget: "string"
+          - label: "The Hub Contact Info"
+            name: "hubContact"
+            widget: "object"
+            fields:
+            - label: "Telephone Number Data (No spaces or dashes)"
+              name: "tel"
+              widget: "string"
+            - label: "Telephone Number Display"
+              name: "telDisplay"
+              widget: "string"
+            - label: "Address Line 1"
+              name: "addressLine1"
+              widget: "string"
+            - label: "Address Line 2"
+              name: "addressLine2"
+              widget: "string"
+            - label: "Map Link"
+              name: "mapLink"
+              widget: "string"
+          - label: "Rebound Contact Info"
+            name: "reboundContact"
+            widget: "object"
+            fields:
+            - label: "Telephone Number Data (No spaces or dashes)"
+              name: "tel"
+              widget: "string"
+            - label: "Telephone Number Display"
+              name: "telDisplay"
+              widget: "string"
+            - label: "Address Line 1"
+              name: "addressLine1"
+              widget: "string"
+            - label: "Address Line 2"
+              name: "addressLine2"
+              widget: "string"
+            - label: "Map Link"
+              name: "mapLink"
+              widget: "string"
+  - name: "hours"
+    label: "Store Hours"
+    files:
+      - label: "Store Hours"
+        name: "hours"
+        file: "_data/store-hours.yml"
+        widget: "list"
+        fields:
+          - label: "Store Hours"
+            name: "hours"
+            widget: "list"
+            fields:
+              - label: "Store Name"
+                name: "storeName"
+                widget: "string"
+              - label: "Store Logo"
+                name: "storeLogo"
+                widget: "image"
+              - label: "Address Line 1"
+                name: "storeAddress1"
+                widget: "string"
+              - label: "Address Line 2"
+                name: "storeAddress2"
+                widget: "string"
+              - label: "Map Link"
+                name: "addressLink"
+                widget: "string"
+              - label: "Monday Opening Time"
+                name: "monOpen"
+                widget: "string"
