Update store hours data organization

--- a/admin/config.yml
+++ b/admin/config.yml
@@ -442,6 +442,49 @@ collections:
               - label: "Map Link"
                 name: "addressLink"
                 widget: "string"
-              - label: "Monday Opening Time"
-                name: "monOpen"
-                widget: "string"
+              - label: "Weekly Hours"
+                name: "weeklyHours"
+                widget: "object"
+                fields:
+                  - label: "Monday Opening Time"
+                    name: "monOpen"
+                    widget: "string"
+                  - label: "Monday Closing Time"
+                    name: "monClose"
+                    widget: "string"
+                  - label: "Tuesday Opening Time"
+                    name: "tuesOpen"
+                    widget: "string"
+                  - label: "Tuesday Closing Time"
+                    name: "tuesClose"
+                    widget: "string"
+                  - label: "Wednesday Opening Time"
+                    name: "wedOpen"
+                    widget: "string"
+                  - label: "Wednesday Closing Time"
+                    name: "wedClose"
+                    widget: "string"
+                  - label: "Thursday Opening Time"
+                    name: "thursOpen"
+                    widget: "string"
+                  - label: "Thursday Closing Time"
+                    name: "thursClose"
+                    widget: "string"
+                  - label: "Friday Opening Time"
+                    name: "friOpen"
+                    widget: "string"
+                  - label: "Friday Closing Time"
+                    name: "friClose"
+                    widget: "string"
+                  - label: "Saturday Opening Time"
+                    name: "satOpen"
+                    widget: "string"
+                  - label: "Saturday Closing Time"
+                    name: "satClose"
+                    widget: "string"
+                  - label: "Sunday Opening Time"
+                    name: "sunOpen"
+                    widget: "string"
+                  - label: "Sunday Closing Time"
+                    name: "sunClose"
+                    widget: "string"
