--- a/_data/sponsor-list.yml
+++ b/_data/sponsor-list.yml
@@ -1,9 +1,10 @@
-- title: 'Algonquin College'
-  logo: ac-logo.jpg
-  logoAlt:
-- title: 'Government of Canada'
-  logo: gc-logo.png
-  logoAlt:
-- title: 'Government of Ontario'
-  logo: ontario-logo.jpg
-  logoAlt:
+sponsors:
+  - title: 'Algonquin College'
+    logo: ac-logo.jpg
+    logoAlt:
+  - title: 'Government of Canada'
+    logo: gc-logo.png
+    logoAlt:
+  - title: 'Government of Ontario'
+    logo: ontario-logo.jpg
+    logoAlt:
