--- a/admin/config.yml
+++ b/admin/config.yml
@@ -191,7 +191,7 @@ collections:
               - label: "Service Slide Image"
                 name: "bgImg"
                 widget: "image"
-          - label: "What We Give?"
+          - label: "What We Give"
             name: "what-we-give"
             widget: "object"
             fields:
@@ -215,6 +215,28 @@ collections:
                     name: "donor"
                   - label: "Amount"
                     name: "amount"
+                    widget: "string"
+          - label: "Board of Directors"
+            name: "board"
+            widget: "object"
+            fields:
+              - label: "About Board"
+                name: "boardAbout"
+                widget: "string"
+                hint: "Brief description about the Board of Directors."
+              - label: "Board Year Title"
+                name: "boardTitle"
+                widget: "string"
+                hint: "Title introducting the year the present board is in office."
+              - label: "Board Members"
+                name: "boardMembers"
+                widget: "list"
+                fields:
+                  - label: "Position"
+                    name: "position"
+                    widget: "string"
+                  - label: "Board Member Name"
+                    name: "member"
                     widget: "string"
           - label: "Include sponsor bar?"
             name: "sponsorBar"
