--- a/_data/pages/volunteer.yml
+++ b/_data/pages/volunteer.yml
@@ -1,203 +1,90 @@
 title: Volunteer
-bylineText: >-
-  Hub & Rebound’s volunteers play an integral role in every aspect of the organization.
 h1Text: Help us give back to the community!
+bylineText: >-
+  Hub & Rebound’s volunteers play an integral role in every aspect of the
+  organization.
 hero: false
 banner:
   bannerButton:
     heroBtn: false
     heroBtnLink: about/
     heroBtnText: Learn More
-  heroImg:
+bodyContent: >-
+  ## Hub & Rebound’s volunteers play an integral role in every aspect of the
+  organization.
+
+
+  Each volunteer’s participation, effort, and enthusiasm holds the key to our
+  success. We aim to provide our donors and shoppers with positive experiences.
+
+
+  As a volunteer at the Hub & Rebound, you have occasion to learn about retail
+  store operations. Students or adults looking to strengthen skills and gain
+  valuable hands-on experience find volunteering at the stores invaluable.
+  Youth, adults, and seniors looking for camaraderie and an opportunity to drive
+  positive change in our community are always welcome.
+
+
+  Join the Hub & Rebound’s volunteer team today!
+
+
+  Fill out our Volunteer Application form below. Our Volunteer Coordinator will
+  get in touch with you shortly!
+
+
+  ### Learn about the impact some of our fantastic volunteers have made in the
+  past:
 volunteerForm:
-  - legend: Personal Information
-    additionalInfo: Select all that apply
+  - additionalInfo: Select all that apply
     fieldlayout: basic
     fields:
-    - label: Full Name
-      type: text
-      id: full-name
-      name: full-name
-    - label: Email Address
-      type: email
-      id: email
-      name: email
-    - label: Address
-      type: text
-      id: address
-      name: address
-    - label: Phone
-      type: tel
-      id: phone
-      name: phone
-  - legend: Are you a student seeking volunteer hours?
-    fieldlayout: basic
+      - id: full-name
+        label: Full Name
+        name: full-name
+        type: text
+      - id: email
+        label: Email Address
+        name: email
+        type: email
+      - id: address
+        label: Address
+        name: address
+        type: text
+      - id: phone
+        label: Phone
+        name: phone
+        type: tel
+    legend: Personal Information
+  - fieldlayout: basic
     fields:
-      - label: 'Yes'
-        type: radio
-        id: student-yes
+      - id: student-yes
+        label: 'Yes'
         name: student
-      - label: 'No'
         type: radio
-        id: student-no
+      - id: student-no
+        label: 'No'
         name: student
-  - legend: Where are you interested in volunteering?
-    additionalInfo: Select all that apply
+        type: radio
+    legend: Are you a student seeking volunteer hours?
+  - additionalInfo: Select all that apply
     fieldlayout: basic
     fields:
-      - label: The Hub
-        type: checkbox
-        id: the-hub
+      - id: the-hub
+        label: The Hub
         name: the-hub
-      - label: Rebound
         type: checkbox
-        id: rebound
+      - id: rebound
+        label: Rebound
         name: rebound
-  - legend: Which jobs interest you the most?
-    additionalInfo: Select all that apply
-    fieldLayout: checklists
-    group:
-      - groupTitle: The Hub
-        groupXSSize: 1
-        groupMSize: 1-2
-        fields:
-          - label: Cashier
-            type: checkbox
-            id: hub-cashier
-            name: hub-cashier
-          - label: Bagging Purchases at Cash
-            type: checkbox
-            id: hub-bagging
-            name: hub-bagging
-          - label: Hanging Up Clothing/Hanger Organization
-            type: checkbox
-            id: hub-hanging-org
-            name: hub-hanging-org
-          - label: Crafts/Notions/Seasonal
-            type: checkbox
-            id: hub-crafts-seasonal
-            name: hub-crafts-seasonal
-          - label: Toys
-            type: checkbox
-            id: hub-toys
-            name: hub-toys
-          - label: Books
-            type: checkbox
-            id: hub-books
-            name: hub-books
-          - label: Recycling
-            type: checkbox
-            id: hub-recycling
-            name: hub-recycling
-      - groupTitle: Rebound
-        groupXSSize: 1
-        groupMSize: 1-2
-        fields:
-          - label: Cashier
-            type: checkbox
-            id: reb-cashier
-            name: reb-cashier
-          - label: Loading & Unloading
-            type: checkbox
-            id: reb-loading
-            name: reb-loading
-          - label: Rearranging Furniture
-            type: checkbox
-            id: reb-rearrange
-            name: reb-rearrange
-          - label: Electronics
-            type: checkbox
-            id: reb-electronics
-            name: reb-electronics
-          - label: Appliance Testing
-            type: checkbox
-            id: reb-appliance-testing
-            name: reb-appliance-testing
-          - label: Cleaning
-            type: checkbox
-            id: reb-cleaning
-            name: reb-cleaning
-          - label: Recycling
-            type: checkbox
-            id: reb-recycling
-            name: reb-recycling
-  - legend: When are you available to work?
-    additionalInfo: Select all that apply
-    fieldLayout: checklists
-    group:
-      - groupTitle: Monday
-        groupXSSize: 1
-        groupSSize: 1-2
-        groupMSize: 1-3
-        fields:
-          - label: 9:00am - 12:30pm
-            id: monAM
-            name: monAM
-          - label: 12:30pm - 4:30pm
-            id: monPM
-            name: monPM
-      - groupTitle: Tuesday
-        groupXSSize: 1
-        groupSSize: 1-2
-        groupMSize: 1-3
-        fields:
-          - label: 9:00am - 12:30pm
-            id: tuesAM
-            name: tuesAM
-          - label: 12:30pm - 4:30pm
-            id: tuesPM
-            name: tuesPM
-      - groupTitle: Wednesday
-        groupXSSize: 1
-        groupSSize: 1-2
-        groupMSize: 1-3
-        fields:
-          - label: 9:00am - 12:30pm
-            id: wedAM
-            name: wedAM
-          - label: 12:30pm - 4:30pm
-            id: wedPM
-            name: wedPM
-      - groupTitle: Thursday
-        groupXSSize: 1
-        groupSSize: 1-2
-        groupMSize: 1-3
-        fields:
-          - label: 9:00am - 12:30pm
-            id: thursAM
-            name: thursAM
-          - label: 12:30pm - 4:30pm
-            id: thursPM
-            name: thursPM
-          - label: 5:30pm - 8:30pm
-            id: thursLate
-            name: thursLate
-      - groupTitle: Friday
-        groupXSSize: 1
-        groupSSize: 1-2
-        groupMSize: 1-3
-        fields:
-          - label: 9:00am - 12:30pm
-            id: friAM
-            name: friAM
-          - label: 12:30pm - 4:30pm
-            id: friPM
-            name: friPM
-      - groupTitle: Saturday
-        groupXSSize: 1
-        groupSSize: 1-2
-        groupMSize: 1-3
-        fields:
-          - label: 9:00am - 12:30pm
-            id: satAM
-            name: satAM
-          - label: 12:30pm - 4:30pm
-            id: satPM
-            name: satPM
-  - legend: Describe any related experience or qualifications.
-    fieldLayout: textarea
-    fields:
-      - label: Qualifications
-        id: qualifications
+        type: checkbox
+    legend: Where are you interested in volunteering?
+  - additionalInfo: Select all that apply
+    legend: Which jobs interest you the most?
+  - additionalInfo: Select all that apply
+    legend: When are you available to work?
+  - fields:
+      - id: qualifications
+        label: Qualifications
         name: qualifications
+    legend: Describe any related experience or qualifications.
 sponsorBar: false
