--- a/admin/config.yml
+++ b/admin/config.yml
@@ -288,6 +288,9 @@ collections:
               - label: "Banner Image"
                 name: "heroImg"
                 widget: "image"
+          - label: "Body Content"
+            name: "bodyContent"
+            widget: "markdown"
           - label: "Volunteer Form"
             name: "volunteerForm"
             widget: "list"
